--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Khalid 
-middle_name: F.
+middle_name: F
 last_name: Alqahtani
 email: khalid.alqahtani@unh.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
