--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Khalid
 middle_name: F.
 last_name: Alqahtani
 email: khalid.alqahtani@unh.edu
-description: PhD Candidate in applied mathematics >  # the ">" symbol means to ignore newlines until "footer_text:"
+description: I am a PhD Candidate in applied mathematics >  # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
